# mr

./: .gitignore  LICENSE  README.md
assignment1/: Makefile  pyproject.toml
assignment1/assignment1/: kinematics.py  kuka.py  robots.py  workspace.py
assignment1/model_files/: PXA-100-MOBILE v6.f3d  PXA-100-MOBILE v6.step  PXA-100-MOBILE v6.stl
assignment1/trossen/: robots.py  simulation.py  singularities.py  workspace.py
practicals/: lab3.m  puma_simulation.m
